--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /.vs/Medicina/FileContentIndex/51c719e4-4067-4647-a10c-77c407e6ae7e.vsidx
 /.vs/Medicina/FileContentIndex/a2d7828f-6073-4c7f-8678-08f6ca78d16b.vsidx
 /.vs/Medicina/FileContentIndex/d0d684e3-531a-46e5-a0ff-d7cd868b7406.vsidx
+*.vsidx
+/Medicina/obj/Debug/netcoreapp3.1/Medicina.assets.cache
+/Medicina/obj/Debug/netcoreapp3.1/Medicina.GeneratedMSBuildEditorConfig.editorconfig
