--- a/Medicina/appsettings.json
+++ b/Medicina/appsettings.json
@@ -6,8 +6,29 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ProjectConfiguration": {
+    "ClientID": "qbgSZ3KFhq11HNTPr7Hf",
+    "ClientSecret": "08AdfQSSPme4VPygVUuZ",
+    "FrontEndURL": "T8aRwWvpMBimoRUOM9Vr",
+    "JWT": {
+      "Key": "rltCPJ9e6jkCq5nrPP5A",
+      "Issuer": "bOH8NLMXtivXMrB6c9ED",
+      "Audience": "wEoprCagCl0G5ySSfZxA",
+      "Subject": "hkz2Ba9cf2Q4lPjAf6mS"
+    }
+  },
+  "MailSettings": {
+    "DisplayName": "Oswald Abbott",
+    "From": "oswald.abbott@ethereal.email",
+    "Host": "smtp.ethereal.email",
+    "Password": "rY3bk795CcNh7JVz75",
+    "Port": 587,
+    "UserName": "oswald.abbott@ethereal.email",
+    "UseSSL": false,
+    "UseStartTls": true
+  },
   "ConnectionStrings": {
-    "MyDBConnection": "Data Source=DESKTOP-I3QKF8F;Initial Catalog=Odbrana;Integrated Security=True"
+    "MyDBConnection": "Server=DESKTOP-E8KRQ2G\\SQLEXPRESS;Database=ISA;Integrated Security=True"
   },
   "AllowedHosts": "*"
 }
