--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@
 *.dll
 *.editorconfig
 *.pdb
+/Medicina/obj/Debug/netcoreapp3.1/Medicina.AssemblyInfoInputs.cache
+/Medicina/obj/Debug/netcoreapp3.1/Medicina.csproj.AssemblyReference.cache
