--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@
 /Medicina/obj/Debug/netcoreapp3.1/Medicina.AssemblyInfo.cs
 /Medicina/obj/Debug/netcoreapp3.1/Medicina.AssemblyInfoInputs.cache
 /Medicina/obj/Medicina.csproj.nuget.g.props
+/Medicina/obj/Debug/netcoreapp3.1/Medicina.csproj.AssemblyReference.cache
