--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@
 /Medicina/obj/Debug/netcoreapp3.1/Medicina.AssemblyInfoInputs.cache
 /Medicina/obj/Medicina.csproj.nuget.g.props
 /Medicina/obj/Debug/netcoreapp3.1/Medicina.csproj.AssemblyReference.cache
+/Medicina/obj/Medicina.csproj.nuget.g.props
