fixed merge conflicts

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@
 /Medicina/obj/Medicina.csproj.nuget.g.props
 /Medicina/obj/Debug/netcoreapp3.1/Medicina.csproj.AssemblyReference.cache
 /Medicina/obj/Medicina.csproj.nuget.g.props
+/Medicina/obj/Debug/netcoreapp3.1/Medicina.csproj.CoreCompileInputs.cache
