--- a/Medicina/Medicina.csproj
+++ b/Medicina/Medicina.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="System.Drawing.Common" Version="8.0.4" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
     <PackageReference Include="ZXing.Net" Version="0.16.9" />
+    <PackageReference Include="ZXing.Net.Bindings.SkiaSharp" Version="0.16.14" />
   </ItemGroup>
 
 
